# monero-oxide

./: Cargo.toml  Code of Conduct.md  Contributing.md  Governance.md  MSRV Policy.md  README.md  SHEKYL_READINESS.md  Security.md
.cursor/rules/: backward-compatibility.mdc  copyright-header.mdc  documentation-after-plans.mdc  modular-consensus.mdc  privacy-security.mdc  rust-preferred.mdc  shekyl-first-development.mdc  system-autonomy.mdc  usability.mdc  version-symbol-migration.mdc
.github/actions/build-dependencies/: action.yml
.github/actions/monero/: action.yml
.github/actions/monero-wallet-rpc/: action.yml
.github/actions/shekyl/: action.yml
.github/actions/shekyl-wallet-rpc/: action.yml
.github/actions/test-dependencies/: action.yml
.github/workflows/: daily-deny.yml  lint.yml  no-std.yml  pages.yml  tests.yml
audits/Cypher Stack May 2025/: README.md
audits/generalized-bulletproofs/: LICENSE  README.md
audits/helioselene/: README.md
audits/helioselene/script/: LICENSE
crypto/divisors/: Cargo.toml
crypto/divisors/src/: barycentric.rs  divisor.rs  ec.rs  lib.rs  poly.rs
crypto/divisors/src/tests/: mod.rs
crypto/fcmps/: Cargo.toml
crypto/fcmps/circuit-abstraction/: Cargo.toml
crypto/fcmps/circuit-abstraction/src/: gadgets.rs  lib.rs
crypto/fcmps/ec-gadgets/: Cargo.toml
crypto/fcmps/ec-gadgets/src/: dlog.rs  lib.rs
crypto/fcmps/src/: circuit.rs  lib.rs  tape.rs  tests.rs
crypto/fcmps/src/gadgets/: interactive.rs
crypto/fcmps/src/prover/: blinds.rs  mod.rs
crypto/generalized-bulletproofs/: Cargo.toml  README.md
crypto/generalized-bulletproofs/src/: arithmetic_circuit_proof.rs  inner_product.rs  lib.rs  lincomb.rs  point_vector.rs  scalar_vector.rs  transcript.rs
crypto/generalized-bulletproofs/src/tests/: inner_product.rs  mod.rs
crypto/generalized-bulletproofs/tests/: arithmetic_circuit_proof.rs
crypto/helioselene/: Cargo.toml  README.md
crypto/helioselene/benches/: helioselene.rs
crypto/helioselene/src/: ciphersuite.rs  field.rs  lib.rs  point.rs
crypto/helioselene/src/field/: mod.rs
crypto/helioselene/src/field/verified/: invert.rs  mod.rs  pow.rs  red.rs  sqrt.rs
media/: README.md
monero-oxide/: Cargo.toml  README.md
monero-oxide/ed25519/: Cargo.toml
monero-oxide/ed25519/src/: compressed_point.rs  point.rs
monero-oxide/ed25519/tests/: constants.rs
monero-oxide/fcmp/bulletproofs/: Cargo.toml
monero-oxide/fcmp/fcmp++/: Cargo.toml  README.md  build.rs
monero-oxide/fcmp/fcmp++/src/: lib.rs
monero-oxide/fcmp/fcmp++/src/sal/: legacy_multisig.rs
monero-oxide/fuzz/: Cargo.toml
monero-oxide/fuzz/fuzz_targets/: fuzz_rct_base_read.rs  fuzz_rct_prunable_read.rs  fuzz_transaction_read.rs
monero-oxide/generators/: Cargo.toml
monero-oxide/interface/daemon/simple-request/src/: lib.rs
monero-oxide/io/: Cargo.toml
monero-oxide/io/src/: varint.rs
monero-oxide/primitives/: Cargo.toml
monero-oxide/ringct/bulletproofs/generators/: Cargo.toml
monero-oxide/ringct/bulletproofs/src/original/: inner_product.rs
monero-oxide/ringct/bulletproofs/src/plus/: weighted_inner_product.rs
monero-oxide/ringct/fcmp++/: Cargo.toml  build.rs
monero-oxide/ringct/fcmp++/generators/: Cargo.toml  LICENSE  README.md
monero-oxide/ringct/fcmp++/generators/src/: lib.rs
monero-oxide/ringct/fcmp++/src/: lib.rs
monero-oxide/ringct/fcmp++/src/sal/: legacy_multisig.rs  mod.rs  multisig.rs
monero-oxide/ringct/fcmp++/src/tests/: mod.rs
monero-oxide/ringct/fcmp++/src/tests/sal/: legacy_multisig.rs  mod.rs  multisig.rs
monero-oxide/rpc/: Cargo.toml
monero-oxide/rpc/simple-request/: Cargo.toml
monero-oxide/rpc/src/: lib.rs
monero-oxide/src/: fcmp.rs  lib.rs
monero-oxide/tests/: tests.rs
monero-oxide/wallet/: Cargo.toml  README.md
monero-oxide/wallet/address/: Cargo.toml
monero-oxide/wallet/base58/: Cargo.toml
monero-oxide/wallet/src/: decoys.rs  lib.rs  scan.rs
monero-oxide/wallet/src/send/: eventuality.rs  mod.rs  multisig.rs  tx.rs  tx_keys.rs
monero-oxide/wallet/tests/: eventuality.rs  send.rs
monero-oxide/wallet/tests/runner/: builder.rs  mod.rs
shekyl-oxide/fcmp/fcmp++/: Cargo.toml
shekyl-oxide/fcmp/fcmp++/src/: lib.rs
shekyl-oxide/fcmp/fcmp++/src/sal/: mod.rs
shekyl-oxide/fcmp/fcmp++/src/tests/: mod.rs
shekyl-oxide/fcmp/fcmp++/src/tests/sal/: mod.rs
shekyl-oxide/src/: fcmp.rs
shekyl-oxide/src/tests/: transaction.rs
shekyl-oxide/tests/: tests.rs
shekyl-oxide/wallet/address/: Cargo.toml
shekyl-oxide/wallet/base58/src/: lib.rs
shekyl-oxide/wallet/src/: lib.rs
shekyl-oxide/wallet/src/send/: eventuality.rs  tx.rs  tx_keys.rs
tests/no-std/: Cargo.toml  LICENSE  README.md
tests/no-std/src/: lib.rs
tests/verify-chain/: Cargo.toml  README.md
tests/verify-chain/src/: main.rs
