[package]
name = "shekyl-oxide-no-std-tests"
version = "0.1.0"
description = "A crate to test no-std builds of shekyl-oxide crates work"
license = "MIT"
repository = "https://github.com/Shekyl-Foundation/shekyl-oxide/tree/main/tests/no-std"
authors = ["Luke Parker <lukeparker5132@gmail.com>", "Shekyl Foundation <dev@shekyl.org>"]
keywords = ["nostd", "no_std", "alloc"]
edition = "2021"
publish = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
# Helioselene SHOULD work on `no-std`, yet it uses `std-shims` which requires `alloc`
helioselene = { path = "../../crypto/helioselene", default-features = false, optional = true }

shekyl-wallet = { path = "../../shekyl-oxide/wallet", default-features = false, features = ["compile-time-generators"], optional = true }

[features]
alloc = ["helioselene/alloc", "shekyl-wallet"]
