[package]
name = "shekyl-oxide-verify-chain"
version = "0.1.0"
description = "Shekyl chain verification"
license = "MIT"
repository = "https://github.com/Shekyl-Foundation/shekyl-oxide/tree/main/tests/verify-chain"
authors = ["Luke Parker <lukeparker5132@gmail.com>", "Shekyl Foundation <dev@shekyl.org>"]
edition = "2021"
publish = false
rust-version = "1.75"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
rand_core = { version = "0.6", default-features = false, features = ["std"] }

curve25519-dalek = { version = "4", default-features = false, features = ["alloc", "zeroize"] }

hex = { version = "0.4", default-features = false, features = ["std"] }
serde = { version = "1", default-features = false, features = ["derive", "alloc", "std"] }
serde_json = { version = "1", default-features = false, features = ["alloc", "std"] }

shekyl-oxide = { path = "../../shekyl-oxide", default-features = false, features = ["std", "compile-time-generators"] }
shekyl-rpc = { path = "../../shekyl-oxide/rpc", default-features = false, features = ["std"] }
shekyl-simple-request-rpc = { path = "../../shekyl-oxide/rpc/simple-request", default-features = false }

tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros"] }
