[package]
# Renamed from `shekyl-address` to `shekyl-oxide-address` to avoid a
# package-name collision with downstream consumers (notably `shekyl-core`)
# that maintain their own first-party `shekyl-address` crate for Bech32m,
# network-aware Shekyl addresses. This crate implements the CryptoNote-style
# legacy/integrated address codec inherited from monero-serai and consumed
# by the fork's `shekyl-rpc` and standalone `shekyl-wallet` crates.
name = "shekyl-oxide-address"
version = "0.1.0"
description = "CryptoNote-style legacy address codec for monero-oxide consumers"
license = "MIT"
repository = "https://github.com/Shekyl-Foundation/shekyl-oxide/tree/main/shekyl-oxide/wallet/address"
authors = ["Luke Parker <lukeparker5132@gmail.com>", "Shekyl Foundation <dev@shekyl.org>"]
edition = "2021"
rust-version = "1.66"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
thiserror = { version = "2", default-features = false }

zeroize = { version = "^1.5", default-features = false, features = ["zeroize_derive"] }

curve25519-dalek = { version = "4", default-features = false, features = ["alloc", "zeroize"] }

shekyl-io = { path = "../../io", default-features = false }
shekyl-base58 = { path = "../base58", default-features = false }

[dev-dependencies]
rand_core = { version = "0.6", default-features = false, features = ["std"] }

hex-literal = { version = ">= 0.4, <= 1", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

[features]
std = [
  "thiserror/std",

  "zeroize/std",

  "shekyl-io/std",
  "shekyl-base58/std",
]
default = ["std"]
