[package]
name = "monero-fcmp-plus-plus-generators"
version = "0.1.0"
description = "Monero's FCMP++ Generators"
license = "MIT"
repository = "https://github.com/monero-oxide/monero-oxide/tree/main/monero-oxide/ringct/fcmp++/generators"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
edition = "2021"
rust-version = "1.68"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
std-shims = { version = "0.1.5", default-features = false }

group = { version = "0.13", default-features = false, features = ["alloc"] }
ciphersuite = { version = "0.4", default-features = false, features = ["alloc"] }
helioselene = { path = "../../../../crypto/helioselene", version = "0.1", default-features = false }

generalized-bulletproofs = { path = "../../../../crypto/generalized-bulletproofs", default-features = false }
full-chain-membership-proofs = { path = "../../../../crypto/fcmps", default-features = false }

monero-primitives = { path = "../../../primitives", version = "0.1", default-features = false }
monero-ed25519 = { path = "../../../ed25519", version = "0.1", default-features = false }

[features]
std = [
  "std-shims/std",

  "ciphersuite/std",
  "helioselene/std",

  "generalized-bulletproofs/std",

  "monero-ed25519/std"
]
default = ["std"]
